src/test/06-Errors/error-return-if-no-else.txt
error-return-if-no-else.ck:4:5: error: not all control paths in 'fun float foo(int v)' return a value
[4] fun float foo( int v )
        ^
